# IV-TransBiz

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  Dockerfile  Issues.md  README.md  docker-compose.yml  plan0.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/adapters/: __init__.py  supabase_client.py
app/adapters/api/: __init__.py
app/adapters/api/routers/: __init__.py  auth.py  health.py  system.py
app/adapters/api/schemas/: auth.py
app/adapters/repositories/: supabase_auth_repository.py  supabase_database_repository.py
app/domain/entities/: user.py
app/use_cases/auth/: __init__.py  login_use_case.py  ports.py  signup_use_case.py
app/use_cases/health/: __init__.py  health_check_use_case.py  ports.py
docs/: Issues.md  REFACTORING_PLAN.md  TODO.md  plan0.md  plan1.md  plan2.md  plan3.md  stories.md
tests/: conftest.py
tests/api/: test_auth.py
tests/domain/: test_user.py
tests/unit/use_cases/auth/: test_login_use_case.py  test_signup_use_case.py
tests/unit/use_cases/health/: test_health_check_use_case.py
