[project]
name = "transbiz"
version = "0.1.0"
description = "Amazon Product Monitoring & Optimization Tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "scalar-fastapi>=1.0.3",
    "supabase>=2.22.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.3.0",
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
